--- a/gmall-parent/common/common-util/pom.xml
+++ b/gmall-parent/common/common-util/pom.xml
@@ -17,6 +17,12 @@
             <artifactId>httpclient</artifactId>
             <version>4.5.13</version>
         </dependency>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-core</artifactId>
+            <version>3.0.5</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
