--- a/gmall-parent/common/pom.xml
+++ b/gmall-parent/common/pom.xml
@@ -20,7 +20,7 @@
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <artifactId>boot-starter-web</artifactId>
             <version>2.2.2.RELEASE</version>
             <scope>provided</scope>
         </dependency>
