--- a/gmall-parent/service/service-product/src/main/resources/application-dev.yml
+++ b/gmall-parent/service/service-product/src/main/resources/application-dev.yml
@@ -17,7 +17,7 @@ spring:
     username: admin
     password: admin
   redis:
-    host: localhost
+    host: 192.168.1.10
     port: 6379
     database: 0
     timeout: 1800000
