--- a/gmall-parent/service/service-product/src/main/resources/application-dev.yml
+++ b/gmall-parent/service/service-product/src/main/resources/application-dev.yml
@@ -4,20 +4,22 @@ server:
 mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-  mapper-locations: classpath:com/atguigu/service/*/mapper/*.xml
+    auto-mapping-behavior: full
+  mapper-locations: classpath:com/mynah/service/*/mapper/*.xml
+  type-aliases-package: com.mynah.gmall.model
 
 spring:
   cloud:
     sentinel:
       transport:
-        dashboard: http://192.168.1.10:8080
+        dashboard: http://127.0.0.1:8080
   rabbitmq:
     host: 47.93.118.241
     port: 9672
-    username: admin
-    password: admin
+    username: root
+    password: sevenights
   redis:
-    host: 192.168.1.10
+    host: 127.0.0.1
     port: 6379
     database: 0
     timeout: 1800000
@@ -31,9 +33,9 @@ spring:
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://192.168.1.10:3306/gmall_product?characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://127.0.0.1:3306/gmall_product?characterEncoding=utf-8&useSSL=false
     username: root
-    password: root
+    password: sevenights
     hikari:
       connection-test-query: SELECT 1
       connection-timeout: 60000
