--- a/gmall-parent/common/pom.xml
+++ b/gmall-parent/common/pom.xml
@@ -20,8 +20,8 @@
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>boot-starter-web</artifactId>
-            <version>2.2.2.RELEASE</version>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>2.2.1.RELEASE</version>
             <scope>provided</scope>
         </dependency>
 
