--- a/gmall-parent/pom.xml
+++ b/gmall-parent/pom.xml
@@ -14,6 +14,12 @@
         <module>service</module>
     </modules>
 
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.2.1.RELEASE</version>
+    </parent>
+
     <!--定义jar包的版本号-->
     <properties>
         <java.version>1.8</java.version>
